--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 
   <body>
     <header>
-      <a href="/"><img src="img/profilepic.jpg" style=""width: 100px; height: 50px;""></a>
+      <a href="/"><img src="img/profilepic-min.jpg" style=""width: 100px; height: 50px;""></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
