--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
           </li>
 
           <li>
-            <img style="width: 100px;" src="views/images/pizzeria.jpg"  style="width: 100px; height: 50px;">
+            <img style="width: 100px;" src="views/images/pizzeria-min.jpg"  style="width: 100px; height: 50px;">
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
