--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <link href="css/style.css" rel="stylesheet">
     <!-- Adding media query to link -->
     <link href="css/print.css" rel="stylesheet" media="print">
+    <link href="css/portrait.css" rel="stylesheet" media="orientation:portrait">
 
     <script>
       (function(w,g){w['GoogleAnalyticsObject']=g;
