--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
     <header>
       <a href="/">
         <!-- compressed image source-->
-        <img src="img/profilepic-min.jpg" style=""width: 100px; height: 50px;""></a>
+        <img src="img/profilepic-min.jpg"></a>
       <p>Cameron Pittman<br><span>Course Developer</span></p>
     </header>
 
@@ -43,26 +43,25 @@
       <div class="content">
         <ul>
           <li>
-            <img src="https://lh4.ggpht.com/kJEnfqhPvtm4m3EneSZ4fWYGS8lW4YNhEjk6zPkyrQaBUHc-2Y_ElDic99NHI0h-UBLXVbRCjFybFvrWxdk=s100">
-            <a href="project-2048.html" style=""width: 100px; height: 50px;"">Build Your Own 2048!</a>
+            <img src="img/game-min.jpg"  >
+            <a href="project-2048.html">Build Your Own 2048!</a>
             <p>I made my own version of 2048. How cool is that!?</p>
           </li>
 
           <li>
-            <img src="https://lh6.ggpht.com/f_0W8h__3G99CWTjnMjD8BUKm7yp2-wJyApLtTwFoFtlal2ULf_JgHIsOQq2NiYfKOdMlXlMHDKNo5XVZLs=s100"  style="width: 100px; height: 50px;">
+            <img src="img/optimization-min.jpg"  >
             <a href="project-webperf.html">Website Performance Optimization</a>
             <p>Hey... this class looks familiar.</p>
           </li>
 
           <li>
-            <img src="https://lh5.ggpht.com/IKdCmTWn8a2nMhlwMYzryvzRN5CUZAOBr4tDrEAbszV7TIFe9pRAInA4kkYcgTXwrifJsBEsq1agTueuu-g=s100">
-            <a href="project-mobile.html" style="width: 100px; height: 50px;">Mobile Web Development</a>
+            <img src="img/mobileweb-min.jpg" >Mobile Web Development</a>
             <p>Making mobile apps isn't so hard after all.</p>
           </li>
 
           <li>
             <!-- Compressing image source -->
-            <img style="width: 100px;" src="views/images/pizzeria-min.jpg"  style="width: 100px; height: 50px;">
+            <img src="views/images/pizzeria-min.jpg"  >
             <a href="views/pizza.html">Cam's Pizzeria</a>
             <p>Who wants a performant pizza?</p>
           </li>
